# irealstudio

./: .gitattributes  .gitignore  .release_draft.json  Denizian_blues.html  README.md  app_io.py  app_keys.py  app_menu.py  app_settings.py  changelog.md  chords.py  commands.py  compile.bat  compile.sh  dialogs.py  i18n.py  main.py  main.pyw  midi_handler.py  msgs.py  news.md  pyproject.toml  pyrealpro.py  recorder.py  register_openwith_windows.bat  sound.py  tag_release.py  task.md  test_ireal_export.py  updater.py  version.py  windows_menu.py
.github/: agentsthelegend.agent.md  copilot-instructions.md
.github/skills/releasing/: SKILL.md
.github/workflows/: copilot-setup-steps.yml  release.yml
examples/: Deniz_changes.html  Deniz_changes.ips
locales/ru/LC_MESSAGES/: irealstudio.mo  irealstudio.po
templates/: AABA 32.ipst  ABAC 32.ipst  ABCD 32.ipst  Ballad AABA 32.ipst  Blues 12.ipst  Minor Blues 12.ipst  Waltz AABA 32.ipst
tests/: test_ireal_export.py  test_release_notes.py
