[project]
name = "irealstudio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accessible-output3>=0.1.2",
    "gitpython>=3.1.46",
    "mido>=1.3.3",
    "numpy>=2.4.3",
    "pyrealpro>=0.2.0",
    "python-rtmidi>=1.5.8",
    "qrcode>=8.2",
    "sounddevice>=0.5.5",
    "wxpython>=4.2.0",
]

[dependency-groups]
dev = [
    "nuitka>=4.0.5",
]

[tool.nuitka]
# Entry point
script-name = "main.pyw"

# Output a self-contained single-file executable
onefile = true
output-dir = "dist"

# Disable the Windows console window (GUI application)
windows-console-mode = "disable"

# Let Nuitka download any required C compiler tools automatically
assume-yes-for-downloads = true

# Suppress progress bar and most informational output in CI
no-progressbar = true
quiet = true

# Follow all imports so that runtime-imported modules are included
follow-imports = true

# Reduce bloat by excluding test frameworks and unused stdlib modules
nofollow-import-to = [
    "unittest",
    "doctest",
    "pdb",
    "tkinter",
    "test",
]

